--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: dotnet-docker-heroku CD
 # Run workflow on every push to master branch.
 on:
   push:
-    branches: [master]
+    branches: [main]
 
 # Your workflows jobs.
 jobs:
